# ocaml-decimal

./: .gitignore  CHANGES  Makefile  README.md  decimal.ml  decimal.mli  decimal.opam  decimal.opam.template  dune  dune-project  index.html  ppx_decimal.opam
api/: index.html
api/decimal/: index.html
api/decimal/Decimal/: index.html
api/decimal/Decimal/Context/: index.html
api/decimal/Decimal/Signal/: index.html
api/decimal/Decimal__/: index.html
api/decimal/Decimal__/Calc/: index.html
api/decimal/Decimal__Calc/: index.html
decimal/: index.html
decimal/Decimal/: index.html
decimal/Decimal/Context/: index.html
decimal/Decimal/Signal/: index.html
lib/: calc.ml  context.ml  decimal.ml  decimal.mli  dune
ppx/: dune  ppx_decimal.ml
ppx_decimal/: index.html
ppx_decimal/Ppx_decimal/: index.html
test/: decimal_test.ml  dune  float.ml  json.ml  parser.ml
test/data/: compare.decTest  quantize.decTest
